Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42064

REG[5.3-5.4] building qmake fails with msvc2010

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.4.0 RC
    • 5.4.0 Beta
    • Build tools: qmake
    • None
    • Windows 7 + Windows SDK 7.1
    • 87eb3ea1904756362ce5474838b25b5b00193dc5

    Description

      Following error occurs when configuring Qt with msvc2010 command prompt:

      C:\work\Qt\git\qt5\qtbase\qmake\library\proitems.cpp(419) : fatal error C1001: A
      n internal error has occurred in the compiler.
      (compiler file 'msc1.cpp', line 1420)
       To work around this problem, try simplifying or changing the program near the l
      ocations listed above.
      Please choose the Technical Support command on the Visual C++
       Help menu, or open the Technical Support help file for more information
      Internal Compiler Error in C:\Program Files (x86)\Microsoft Visual Studio 10.0\V
      C\Bin\cl.EXE.  You will be prompted to send an error report to Microsoft later.
      cl : Command line error D8040 : error creating or communicating with child proce
      ss
      NMAKE : fatal error U1077: '"C:\Program Files (x86)\Microsoft Visual Studio 10.0
      \VC\Bin\cl.EXE"' : return code '0x2'
      Stop.
      Building qmake failed, return code 2
      

      Doesn't happen on Qt 5.3.2.

      Error disappeared after simplifying foreach loop code in file
      qtbase\qmake\library\proitems.cpp(419)

      QStringList ProStringList::toQStringList() const
      {
          QStringList ret;
          ret.reserve(size());
      //    foreach (const ProString &str, *this)
      //        ret << str.toQString();
          for (int i = 0; i < size(); i++)
              ret << at(i).toQString();
          return ret;
      }
      

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-42064
          # Subject Branch Project Status CR V

          Activity

            People

              buddenha Oswald Buddenhagen
              qtcomsupport Qt Support
              Votes:
              1 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes